# idc-launcher

./: .env  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: callback_server.rs  commands.rs  database.rs  discord_auth.rs  game.rs  lib.rs  main.rs  resources.rs
