[package]
name = "idc-launcher"
version = "0.1.2"
description = "A Tauri App"
authors = ["Bowsy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "idc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portablemc = "5.0.4"
portablemc-cli = "5.0.4"
oauth2 = "4.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
webbrowser = "1.0"
tiny_http = "0.12"
dirs = "6.0.0"
tauri-plugin-opener = "2.5.4"
image = { version = "0.25", features = ["jpeg", "png"] }
tauri-plugin-store = "2.4.3"
sha2 = "0.10"
walkdir = "2.5"
tempfile = "3.10"

